--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -33,6 +33,7 @@ h1
     font-size: 10vmin;
     color: var( --primary-color );
     margin: 2vmin;
+    text-align: center;
 }
 
 a
@@ -64,6 +65,7 @@ a
     width: 25vmin;
     background-color: var( --primary-color );
     box-shadow: 0 0 2px 0 var( --primary-color );
+    cursor: pointer;
     transition: 0.3s;
 }
 
@@ -188,9 +190,20 @@ a
     display: none;
 }
 
+.users-data tbody tr
+{
+    cursor: pointer;
+    transition: 0.3s;
+}
+
 .users-data tbody tr:nth-child( 2n )
 {
     background-color: var( --light-primary-color );
+}
+
+.users-data tbody tr:hover
+{
+    background-color: var( --primary-color );
 }
 
 /* modal */
@@ -207,6 +220,9 @@ a
 	background-color: #ffffff;
 	z-index: 999;
 	border-radius: 1vmin;
+    display: flex;
+    flex-direction: column;
+    padding: 3vmin;
     opacity: 1;
 	animation-name: fadeInOpacity;
 	animation-timing-function: linear;
@@ -222,6 +238,9 @@ a
 	right: 0;
 	background-color: rgba(0,0,0,0.7);
     z-index: 500;
+    animation-name: fadeInOpacity;
+	animation-timing-function: linear;
+	animation-duration: 0.3s;
 }
 
 .modal .close-modal
@@ -237,6 +256,28 @@ a
 .modal .close-modal:focus
 {
 	outline: none;
+}
+
+.modal h2
+{
+    color: var( --primary-color );
+    font-size: 6vmin;
+    text-align: center;
+    margin-bottom: 2vmin;
+}
+
+.modal .title
+{
+    font-size: larger;
+    font-weight: bold;
+    margin: 1vmin;
+}
+
+.modal .title label
+{
+    font-size: medium;
+    font-weight: normal;
+    display: block;
 }
 
 @media screen and (max-width: 600px) 
@@ -294,11 +335,31 @@ a
         height: 65vh;
     }
 
+    /* modal */
+    .modal
+    {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+
 }
 
 .hidden
 {
     display: none;
+}
+
+@keyframes fadeInOpacity 
+{
+	0% 
+    {
+		opacity: 0;
+	}
+	100% 
+    {
+		opacity: 1;
+	}
 }
 
 @keyframes spin 
