--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -1,371 +1,426 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-
-:root 
-{
-    --primary-color: #FE5454;
-    --light-primary-color: rgba(254, 84, 84, 0.4);
-    --secondary-color: #F7F8F9;
-    --textcolor: #000000;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+#toast {
+  visibility: hidden;
+  width: 60vmin;
+  padding: 2vmin 0;
+  text-align: center;
+  vertical-align: middle;
+  margin: auto;
+  position: fixed;
+  z-index: 1;
+  top: 6%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  border-radius: 1rem;
+  background-color: #333;
+  color: #fff;
 }
 
-* 
-{ 
-    -moz-box-sizing: border-box; 
-    -webkit-box-sizing: border-box; 
-     box-sizing: border-box; 
+#toast.show {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 4.5s;
+  animation: fadein 0.5s, fadeout 0.5s 4.5s;
 }
 
-html
-{
-    font-family: 'Open Sans', sans-serif;
-}
-  
-body
-{
-    margin: 0;
-    padding: 0;
-    background-color: var( --secondary-color );
+#toast.info {
+  background-color: #ffffff;
 }
 
-h1
-{
-    font-weight: 900;
-    font-size: 10vmin;
-    color: var( --primary-color );
-    margin: 2vmin;
-    text-align: center;
+#toast.error {
+  background-color: #e92525;
 }
 
-a
-{
-    color: var( --primary-color );
+#toast.success {
+  background-color: #1e9e1e;
 }
 
-.text-input
-{
-    border: 1px solid var( --primary-color );
-    border-radius: 1vmin;
-    padding: 2vmin;
-    width: 45vmin;
-    background-color: none;
-    color: var( --primary-color );
-    box-shadow: 0 0 2px 0 var( --primary-color );
+@-webkit-keyframes fadein {
+  from {
+    top: 0;
+    opacity: 0;
+  }
+  to {
+    top: 6%;
+    opacity: 1;
+  }
 }
 
-.text-input:focus
-{
-    outline: none;
+@keyframes fadein {
+  from {
+    top: 0;
+    opacity: 0;
+  }
+  to {
+    top: 6%;
+    opacity: 1;
+  }
 }
 
-.btn
-{
-    border: 1px solid var( --primary-color );
-    border-radius: 1vmin;
-    padding: 2vmin;
-    width: 25vmin;
-    background-color: var( --primary-color );
-    box-shadow: 0 0 2px 0 var( --primary-color );
-    cursor: pointer;
-    transition: 0.3s;
+@-webkit-keyframes fadeout {
+  from {
+    top: 6%;
+    opacity: 1;
+  }
+  to {
+    top: 0;
+    opacity: 0;
+  }
 }
 
-.btn:focus
-{
-    outline: none;
+@keyframes fadeout {
+  from {
+    top: 6%;
+    opacity: 1;
+  }
+  to {
+    top: 0;
+    opacity: 0;
+  }
 }
 
-.btn:hover
-{
-    transform: translateY( -1vmin );
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-.container
-{
-    position: relative;
-	height: 90vh;
-    width: 85vw;
-    margin: 5vh auto;
-    padding: 8vmin;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    justify-self: center;
-    align-self: center;
-    overflow: hidden;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.7);
-    border-radius: 1vmin;
+html {
+  font-family: 'Open Sans', sans-serif;
 }
 
-.column-container
-{
-    flex-direction: column;
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #F7F8F9;
 }
 
-.form
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 50%;
+h1 {
+  font-weight: 900;
+  font-size: 10vmin;
+  color: #FE5454;
+  margin: 2vmin;
+  text-align: center;
 }
 
-.side-img
-{
-    width: 50%;
+a {
+  color: #FE5454;
 }
 
-.change-form
-{
-    font-weight: 600;
+.text-input {
+  border: 1px solid #FE5454;
+  border-radius: 1vmin;
+  padding: 2vmin;
+  width: 45vmin;
+  background-color: none;
+  color: #FE5454;
+  -webkit-box-shadow: 0 0 2px 0 #FE5454;
+          box-shadow: 0 0 2px 0 #FE5454;
+}
+
+.text-input:focus {
+  outline: none;
+}
+
+.btn {
+  border: 1px solid #FE5454;
+  border-radius: 1vmin;
+  padding: 2vmin;
+  width: 25vmin;
+  background-color: #FE5454;
+  -webkit-box-shadow: 0 0 2px 0 #FE5454;
+          box-shadow: 0 0 2px 0 #FE5454;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn:hover {
+  -webkit-transform: translateY(-1vmin);
+          transform: translateY(-1vmin);
+}
+
+.container {
+  position: relative;
+  height: 90vh;
+  width: 85vw;
+  margin: 5vh auto;
+  padding: 8vmin;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  justify-self: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  overflow: hidden;
+  -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.7);
+          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.7);
+  border-radius: 1vmin;
+}
+
+.column-container {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 50%;
+}
+
+.side-img {
+  width: 50%;
 }
 
 /* index page */
-
-.login-form
-{
-    height: 60vh;
-    min-height: 330px;
-}
-
-/* register page */
-
-.register-form
-{
-    height: 95%;
-    min-height: 400px;
+.login-form {
+  height: 60vh;
+  min-height: 330px;
 }
 
 /* data page */
-
-.users
-{
-    height: 50vh;
-    overflow: auto;
-    width: 80%;
-    margin-top: 2vmin;
-    column-width: 33%;
+.users {
+  height: 50vh;
+  overflow: auto;
+  width: 80%;
+  margin-top: 2vmin;
+  -webkit-column-width: 33%;
+          column-width: 33%;
 }
 
-.users-data
-{
-    width: 100%;
-    border-collapse: collapse;
+.users .users-data {
+  width: 100%;
+  border-collapse: collapse;
 }
 
-.users-data td
-{
-    padding: 1vmin;
+.users .users-data td {
+  padding: 1vmin;
 }
 
-.users-data thead
-{
-    background-color: var( --primary-color );
+.users .users-data thead {
+  background-color: #FE5454;
 }
 
-.users-data thead .last-update
-{
-    background-color: var( --secondary-color );
-    text-align: center;
-    transition: 0.3s;
+.users .users-data thead .last-update {
+  background-color: #F7F8F9;
+  text-align: center;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
-.users-data thead .last-update .loader
-{
-    display: inline-block;
-    margin-left: 2vmin;
-    width: 2.5vmin;
-    height: 2.5vmin;
-    border-radius: 100%;
-    border: 2px solid var( --primary-color );
-    border-top-color: transparent;
-    animation-name: spin;
-    animation-iteration-count: infinite;
-	animation-timing-function: linear;
-	animation-duration: 0.2s;
+.users .users-data thead .last-update .loader {
+  display: inline-block;
+  margin-left: 2vmin;
+  width: 2.5vmin;
+  height: 2.5vmin;
+  border-radius: 100%;
+  border: 2px solid #FE5454;
+  border-top-color: transparent;
+  -webkit-animation-name: spin;
+          animation-name: spin;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation-duration: 0.2s;
+          animation-duration: 0.2s;
 }
 
-.users-data thead .last-update .loader.hide
-{
-    display: none;
+.users .users-data thead .last-update .loader.hide {
+  display: none;
 }
 
-.users-data tbody tr
-{
-    cursor: pointer;
-    transition: 0.3s;
+.users .users-data tbody tr {
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
-.users-data tbody tr:nth-child( 2n )
-{
-    background-color: var( --light-primary-color );
+.users .users-data tbody tr:nth-child(2n) {
+  background-color: rgba(254, 84, 84, 0.4);
 }
 
-.users-data tbody tr:hover
-{
-    background-color: var( --primary-color );
+.users .users-data tbody tr:hover {
+  background-color: #FE5454;
 }
 
 /* modal */
-.modal
-{
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate( -50%, -50% );
-	width: 70vw;
-	height: 92vh;
-	max-width: 1200px;
-    max-height: 1000px;
-	background-color: #ffffff;
-	z-index: 999;
-	border-radius: 1vmin;
-    display: flex;
-    flex-direction: column;
-    padding: 3vmin;
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 70vw;
+  height: 92vh;
+  max-width: 1200px;
+  max-height: 1000px;
+  background-color: #ffffff;
+  z-index: 999;
+  border-radius: 1vmin;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 3vmin;
+  opacity: 1;
+  -webkit-animation-name: fadeInOpacity;
+          animation-name: fadeInOpacity;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation-duration: 0.3s;
+          animation-duration: 0.3s;
+}
+
+.modal .close-modal {
+  position: absolute;
+  top: 2%;
+  left: 2%;
+  font-size: 5vmin;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.modal .close-modal:focus {
+  outline: none;
+}
+
+.modal h2 {
+  color: #FE5454;
+  font-size: 6vmin;
+  text-align: center;
+  margin-bottom: 2vmin;
+}
+
+.modal .title {
+  font-size: larger;
+  font-weight: bold;
+  margin: 1vmin;
+}
+
+.modal .title label {
+  font-size: medium;
+  font-weight: normal;
+  display: block;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 500;
+  -webkit-animation-name: fadeInOpacity;
+          animation-name: fadeInOpacity;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation-duration: 0.3s;
+          animation-duration: 0.3s;
+}
+
+@media screen and (max-width: 600px) {
+  .column-container {
+    width: 95vw;
+  }
+  h1 {
+    font-size: 15vmin;
+  }
+  .text-input {
+    width: 85%;
+  }
+  .btn {
+    width: 40vmin;
+  }
+  .form {
+    width: 100%;
+    height: 50vh;
+  }
+  .side-img {
+    position: absolute;
+    inset: 0;
+    opacity: 0.1;
+    z-index: -1;
+  }
+  .change-form {
+    font-size: 4vmin;
+  }
+  /* register page */
+  .register-form {
+    height: 65vh;
+  }
+  /* data page */
+  .users {
+    width: 100%;
+    height: 65vh;
+  }
+  /* modal */
+  .modal {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+}
+
+.hidden {
+  display: none;
+}
+
+@-webkit-keyframes fadeInOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
     opacity: 1;
-	animation-name: fadeInOpacity;
-	animation-timing-function: linear;
-	animation-duration: 0.3s;
+  }
 }
 
-.overlay
-{
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	background-color: rgba(0,0,0,0.7);
-    z-index: 500;
-    animation-name: fadeInOpacity;
-	animation-timing-function: linear;
-	animation-duration: 0.3s;
+@keyframes fadeInOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
-.modal .close-modal
-{
-	position: absolute;
-    top: 2%;
-    left: 2%;
-    font-size: 5vmin;
-    font-weight: bold;
-    cursor: pointer;
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 
-.modal .close-modal:focus
-{
-	outline: none;
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
-
-.modal h2
-{
-    color: var( --primary-color );
-    font-size: 6vmin;
-    text-align: center;
-    margin-bottom: 2vmin;
-}
-
-.modal .title
-{
-    font-size: larger;
-    font-weight: bold;
-    margin: 1vmin;
-}
-
-.modal .title label
-{
-    font-size: medium;
-    font-weight: normal;
-    display: block;
-}
-
-@media screen and (max-width: 600px) 
-{
-    .column-container
-    {
-        width: 95vw;
-    }
-
-    h1
-    {
-        font-size: 15vmin;
-    }
-
-    .text-input
-    {
-        width: 85%;
-    }
-
-    .btn
-    {
-        width: 40vmin;
-    }
-
-    .form
-    {
-        width: 100%;
-        height: 50vh;
-    }
-
-    .side-img
-    {
-        position: absolute;
-        inset: 0;
-        opacity: 0.1;
-        z-index: -1;
-    }
-
-    .change-form
-    {
-        font-size: 4vmin;
-    }
-
-    /* register page */
-    
-    .register-form
-    {
-        height: 65vh;
-    }
-
-    /* data page */
-    .users
-    {
-        width: 100%;
-        height: 65vh;
-    }
-
-    /* modal */
-    .modal
-    {
-        width: 100%;
-        height: 100%;
-        border-radius: 0;
-    }
-
-}
-
-.hidden
-{
-    display: none;
-}
-
-@keyframes fadeInOpacity 
-{
-	0% 
-    {
-		opacity: 0;
-	}
-	100% 
-    {
-		opacity: 1;
-	}
-}
-
-@keyframes spin 
-{
-	100% 
-    {
-		transform: rotate( 360deg );
-	}
-}
+/*# sourceMappingURL=style.css.map */
